added ChangeVelocityCommand and tests